# WarGameBeta

./: .gitignore  CMakeLists.txt
include/: CursorManager.h  GlobalSettings.h  TileMap.h  game.h  rendererManager.h  tile.h  tileRenderer.h
src/: CursorManager.cpp  Game.cpp  GlobalSettings.cpp  RendererManager.cpp  Tile.cpp  TileMap.cpp  TileRenderer.cpp  main.cpp
